# aula06a_bootcamp_python

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
