[tool.poetry]
name = "aula06a-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Gilson <gilsoncruz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.0"
taskipy = "^1.14.1"
pre-commit = "^4.1.0"


[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

#[tool.taskipy.tasks]
#format = "isort main.py && black main.py && flake8 main.py"
